--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 	<title></title>
 	 <link rel="stylesheet" href="style.css">
+	<meta name="viewport" content="width=device-width" />
 </head>
 <body>
 
